# openCloser

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  IFLOW.md  QWEN.md  README.md  pyproject.toml
.claude/skills/: ct  ctp  openspec-apply-change  openspec-archive-change  openspec-explore  openspec-propose  speckit-git-commit  speckit-git-feature  speckit-git-initialize  speckit-git-remote  speckit-git-validate
.codex/skills/: openspec-apply-change  openspec-archive-change  openspec-explore  openspec-propose  speckit-claude-driver  speckit-git-commit  speckit-git-feature  speckit-git-initialize  speckit-git-remote  speckit-git-validate
.cursor/rules/: specify-rules.mdc
.github/workflows/: claude-code-review.yml
.kilocode/rules/: specify-rules.md
.kilocode/workflows/: speckit.plan.md
.qwen/commands/: speckit.plan.md
.specify/: README.md  feature.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  claude.manifest.json  codex.manifest.json  copilot.manifest.json  cursor-agent.manifest.json  gemini.manifest.json  kilocode.manifest.json  kimi.manifest.json  opencode.manifest.json  qwen.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/shell/: ct.zsh  select-worktree.sh  worktrees.sh
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.vibe/agents/: specify-agents.md
config/: slice1.toml  slice2.toml
docs/architecture/: openCloser_Architecture.md
docs/ideas/: openCloser_Ideas.md
docs/prds/: ALF_Outbound_Appointment_Setter_PRD.md  openCloser_MVP.md  openCloser_PRD.md
openspec/: README.md
specs/001-mock-call-mock-crm/: SC008_REVIEW.md  data-model.md  open-questions.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mock-call-real-crm/: clarify-questions.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/opencloser/: __init__.py  cli.py  models.py
tests/: conftest.py  test_imports.py
tests/contract/: test_boundary_isolation.py  (+3 more)
(+152 files in other folders)
