[project]
name = "opencloser"
version = "0.1.0"
description = "openCloser — CRM-first AI communication platform for healthcare-oriented outreach. Slice 1 — Mock Call, Mock CRM."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [
    { name = "Medx / openCloser team" },
]
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
opencloser = "opencloser.cli:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencloser"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "config/", "pyproject.toml", "README.md"]

# ---- ruff ----

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow `assert False` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---- pytest ----

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src/opencloser",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
markers = [
    "module(name): mark a unit-test file as exercising one FR-033 module in isolation (eligibility / transport / persona / crm / core)",
    "integration: end-to-end integration test against the full module stack",
]

[tool.coverage.run]
source = ["src/opencloser"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
